--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,227 @@
-p {
-    color: blue;
+body {
+    display: flex;
+    justify-content: center;
+    background: #2E639C
+}
+
+.calendar-popup {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    background: #2e2e2eD9;
+    z-index: 20;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+/*Nom à changer*/
+.bg-white {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #0a4aab;
+    height: auto;
+    width: 50vw;
+    padding: 5%;
+    font-size: 1.3rem;
+}
+
+.popup-close {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 1vw;
+    right: 1vw;
+    height: 5vw;
+    width: 5vw;
+}
+
+/*Nom à changer*/
+.text-center {
+    color: red;
+    font-weight: bold;
+    padding: 3vh 0 2vh 0;
+}
+
+.font-semibold {
+    font-weight: bold;
+}
+
+/*Nom à changer*/
+.mt-04 {
+    line-height: 3.5vh;
+}
+
+/*Nom à changer*/
+.borderp-2 {
+    border-radius: 5px;
+}
+
+/*Nom à changer*/
+.bg-cyan {
+    background: cyan;
+    color: aliceblue;
+    height: 3vh;
+    width: 15vw;
+}
+
+.bg-cyan:hover {
+    opacity: 75%;
+}
+
+.calendar-wrapper {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    width: 100%;
+}
+
+.calendar-first {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    height: 7vh;
+    width: 50%;
+    background-color: whitesmoke;
+    z-index: 2;
+}
+
+h1 {
+    text-transform: uppercase;
+    font-size: 1rem;
+}
+
+.calendar-second {
+    position: relative;
+    width: 50%;
+}
+
+.calendar-days-name {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    height: 4vh;
+    width: 100%;
+    background-color: antiquewhite;
+}
+
+.days-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid grey;
+    height: 100%;
+    width: 100%;
+}
+
+.calendar-days-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-auto-rows: minmax(50px, auto);
+    grid-gap: 5px;
+    border: 1px solid red;
+    z-index: 5;
+    background: whitesmoke;
+}
+
+.days-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: blue;
+    border-radius: 50%;
+}
+
+.days-item:hover {
+    background-color: yellow;
+    border-radius: 50%;
+    opacity: 85%;
+    cursor: pointer;
+}
+
+.eventOn {
+    background: pink;
+}
+
+.active {
+    background: red;
+    border-radius: 50%;
+    opacity: 85%;
+    cursor: pointer;
+}
+
+.calendar-third {
+    position: relative;
+    display: flex;
+    align-items: center;
+    background: antiquewhite;
+    height: auto;
+    width: 50%;
+}
+
+#events {
+    width: 100%;
+}
+
+.event-wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    height: 5vh;
+    background: blue;
+}
+
+.meeting-logo {
+    background: grey;
+    width: 25%;
+}
+
+/* js changer height et width ici l.106 */
+.meeting-logo svg {
+
+}
+
+.meeting-name {
+    font-size: 1.15rem;
+    padding-left: 10%;
+}
+
+.calendar-fourth {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2%;
+    height: 5vh;
+    width: 50%;
+    background: whitesmoke;
+}
+
+.calendar-btn {
+
+}
+
+/* A remettre en place */
+
+.day {
+
+}
+
+.day.active {
+    
 }
